# LinuxApplicationDevelopment2022

./: readme.md
01_GitBuildReq/: helloworld.c
02_TerminalProject/: Makefile  Show.c
03_Multifile/: Makefile  fun.c  outlib.h  prog.c
04_Text/: randomizer.sh
06_Regexps/: Makefile  esub.c
09_I18n/: CMakeLists.txt  main.c  main.po
12_Documenting/: CMakeLists.txt  dconf  main.c  main.po
